--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -5,7 +5,8 @@
   margin-left: auto;
   margin-right: auto;
   justify-content: space-between;
-  padding-top: 100px;  
+  padding-top: 100px;
+  padding-bottom: 100px;  
 }
 
 @media screen and (max-width: 1600px) {
@@ -15,6 +16,15 @@
   }
 }
 
+@media screen and (max-width: 500px) {
+  .about {
+    padding-left: 5px;
+    padding-right: 5px; 
+    padding-top: 50px;
+    padding-bottom: 50px;  
+    justify-content: flex-end;   
+  }
+}
 
 
 .about__description{
@@ -23,6 +33,14 @@
 @media screen and (max-width: 1600px) {
   .about__description{
     flex-basis: 40%;
+  }
+  
+}
+
+@media screen and (max-width: 500px) {
+  .about__description{
+    flex-basis: 95%;
+    padding-bottom: 30px;
   }
   
 }
@@ -36,6 +54,20 @@
   .about__chapter-wrapper {
     min-height: 270px;
     padding-left: 0px;
+  }  
+}
+
+@media screen and (max-width: 500px) {
+  .about__chapter-wrapper {
+    min-height: 220px;
+    padding-left: 0px;
+  }
+  
+}
+
+@media screen and (max-width: 500px) {
+  .about__chapter-wrapper:not(:last-child) {    
+    padding-bottom: 18px;
   }
   
 }
@@ -46,6 +78,13 @@
 @media screen and (max-width: 1600px) {
   .about__chapter-wrapper_third {
     flex-basis: 28%;
+  }
+}
+
+
+@media screen and (max-width: 500px) {
+  .about__chapter-wrapper_third {
+    flex-basis: 98%;
   }
   
 }
@@ -59,6 +98,14 @@
   .about__chapter-wrapper_half {
     flex-basis: 48%;
     padding-top: 40px;
+  }
+  
+}
+
+@media screen and (max-width: 500px) {
+  .about__chapter-wrapper_half {
+    flex-basis: 98%;
+    padding-top: 0px;
   }
   
 }
