--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,20 +6,20 @@
   width: 100%;
   padding: 10px 350px; 
   margin: 0 auto;
-  z-index: 10;
+  /* z-index: 10; */
   box-sizing: border-box;
   background-color: var(--color-paper);
 }
 
 @media screen and (max-width: 1920px) {
   .header {
-    padding: 0px 150px;
+    padding: 5px 150px;
   }
 }
 
 @media screen and (max-width: 1600px) {
   .header {
-    padding: 0px 20px;
+    padding: 5px 20px;
   }
 }
 
@@ -41,13 +41,20 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .header {
-    padding: 14px 18px;
+    padding: 5px 10px;
+    height: 36px;   
   }
 }
 
 .header__logo {
   height: 40px;
  
+}
+
+@media screen and (max-width: 500px) {
+  .header__logo {
+    height: 30px;   
+  }
 }
