--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -25,9 +25,19 @@
   
 }
 
+
+@media screen and (max-width: 500px) {
+  .main__intro {
+
+    background-position: top -30px center;
+
+  }
+  
+}
+
 .main__about {
   background: linear-gradient(256.35deg, #e3e8e2 0%, #ecebe7 91.6%);
-  padding-bottom: 100px;
+ 
 }
 
 .main__wakesurf {
