--- a/src/components/Wakesurf/Wakesurf.css
+++ b/src/components/Wakesurf/Wakesurf.css
@@ -5,6 +5,17 @@
   margin-right: auto;
 }
 
+@media screen and (max-width: 500px) {
+  .wakesurf {
+  padding-left: 0px;
+  padding-right: 0px;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
+  }
+  
+}
+
 
 .wakesurf__info { 
   background-image: var(--wakesurf);
@@ -26,6 +37,7 @@
     margin-left: 0px;  
     background-size: cover;
     height: auto;
+    
   }
   
 }
@@ -41,6 +53,23 @@
   }
   
 }
+
+
+@media screen and (max-width: 500px) {
+  .wakesurf__info { 
+    background-image: var(--wakesurf-mobile);
+   
+    background-repeat: no-repeat;
+    background-position: bottom ;
+    min-height: 1000px;
+    padding-top: 40px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-left: 0px;  
+  }
+  
+}
+
 
 .wakesurf__board {
   display: flex;  
@@ -59,6 +88,12 @@
   
 }
 
+@media screen and (max-width: 500px) {
+  .wakesurf__board {
+  position: relative;
+  }  
+  
+}
 
 
 .wakesurf__subtitle {
@@ -88,9 +123,42 @@ padding-bottom: 20px;
   
 }
 
+@media screen and (max-width: 500px) {
+  .wakesurf__desc-tabs {
+    padding-bottom: 40px;
+  }
+   
+  
+}
+
+.wakesurf__photos {
+ 
+}
+
+@media screen and (max-width: 500px) {
+  .wakesurf__photos {
+   
+
+  }
+  
+}
+
 .wakesurf__photos-img {
   object-fit: cover;
   width: 100%;
+}
+
+@media screen and (max-width: 500px) {
+  .wakesurf__photos-img {
+    position: absolute;
+    object-fit: cover;
+    width: 120%;
+    bottom: 380px;
+    left: -10%;
+   
+    margin: 0 auto;   
+  }
+  
 }
 
 .wakesurf__contact { 
@@ -105,6 +173,13 @@ padding-bottom: 20px;
     padding-left: 10px;
    flex-direction: column;
    align-items: center;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .wakesurf__contact { 
+    padding-top: 150px;
+    
   }
 }
 
