--- a/src/components/ImagePopup/ImagePopup.css
+++ b/src/components/ImagePopup/ImagePopup.css
@@ -13,7 +13,7 @@
   visibility: hidden;
   opacity: 0; 
   transition: visibility 0.5s cubic-bezier(0.5, 0, 0, 1);
-  z-index: 6;
+  z-index: 12;
 }
 
 .popup__image-container {
@@ -23,6 +23,13 @@
   position: relative;
   width: 75%;
   height: 95%;
+}
+
+@media screen and (max-width: 800px) {
+  .popup__image-container {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 /* @media screen and (max-width: 1600px) {
@@ -45,6 +52,16 @@
   box-sizing: border-box;
 }
 
+@media screen and (max-width: 800px) {
+  .popup__slide {   
+    width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 30px;
+    box-sizing: border-box;
+  }
+}
+
 .popup.popup_is-opened {
   visibility: visible;
   opacity: 1;
@@ -61,8 +78,7 @@
 
  @media screen and (max-width: 1600px) {
   .popup__image {
-   
-    max-height: 500px;
+       max-height: 500px;
 
   }
 }
@@ -97,6 +113,16 @@
   }
 } 
 
+
+@media screen and (max-width: 800px) {
+  .popup__image-title { 
+    font-size: 32px;
+    line-height: 44px;
+    color: var(--color);  
+    padding-bottom: 10px;  
+  }
+} 
+
 .popup__close-button {
   background: url(../../images/cross.png);
   background-size: 100px 100px;
@@ -113,6 +139,18 @@
   opacity: 1;
 }
 
+@media screen and (max-width: 500px) {
+  .popup__close-button {
+
+    width: 60px;
+    height: 60px;
+    top: 20px;
+    right: 0px;
+    background-size: 60px 60px;
+  }
+  
+} 
+
 .popup__close-button::before {
   content: '';
   position: absolute;
@@ -121,6 +159,7 @@
   width: 100%;
   height: 100%;
   background: url(../../images/cross-hover.png);
+ 
   opacity: 0;
   transition: opacity 0.4s cubic-bezier(0.5, 0, 0, 1);
 }
@@ -133,13 +172,7 @@
   transform: scale(1.2);
 }
 
-@media screen and (max-width: 768px) {
-  .popup__close-button {
-    right: 0;
-    width: 21px;
-    height: 21px;
-  }
-}
+
 
 .popup__button {
   background: transparent;
