--- a/src/components/Wakesurf/Wakesurf.css
+++ b/src/components/Wakesurf/Wakesurf.css
@@ -10,7 +10,7 @@
   padding-left: 0px;
   padding-right: 0px;
   flex-direction: column;
-  position: relative;
+  
   overflow: hidden;
   }
   
@@ -137,7 +137,7 @@ padding-bottom: 20px;
 
 @media screen and (max-width: 500px) {
   .wakesurf__photos {
-   
+    position: relative;
 
   }
   
@@ -152,11 +152,10 @@ padding-bottom: 20px;
   .wakesurf__photos-img {
     position: absolute;
     object-fit: cover;
-    width: 120%;
-    bottom: 380px;
-    left: -10%;
-   
-    margin: 0 auto;   
+    width: 130%;
+    top: -150px;
+    left: -15%;   
+  
   }
   
 }
@@ -178,7 +177,7 @@ padding-bottom: 20px;
 
 @media screen and (max-width: 500px) {
   .wakesurf__contact { 
-    padding-top: 150px;
+    padding-top: 210px;
     
   }
 }
